--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
 
-      - uses: php-actions/phpunit@v3
+#      - uses: php-actions/phpunit@v3
