--- a/.github/workflows/php_all.yml
+++ b/.github/workflows/php_all.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup PHP with tools
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.3
+          php-version: ${{ matrix.php-versions }}
           tools: composer
 
       - name: Check PHP version
