--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,15 @@
       "Phpbergen\\": "src"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Phpbergen\\Tests\\": "tests"
+    }
+  },
   "require": {
     "ext-pdo": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^11.0"
   }
 }
