Force phpunit config to use

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -45,3 +45,5 @@ jobs:
         run: composer install --prefer-dist --no-progress
 
       - uses: php-actions/phpunit@v3
+        with:
+          configuration: "./phpunit.xml"
