--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -44,9 +44,11 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
 
-      - name: PHPUnit tests
+      - name: get path
         shell: cmd
         run: echo %PATH%
+
+      - name: PHPUnit tests
         uses: php-actions/phpunit@v3
         with:
           configuration: "/phpunit.xml"
